HLCStyles.css
body {
    display: grid;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    align-items: center;
    justify-content: center;
}

article {
    max-width: 1000px;
    width: 90%;
    max-height: 100vh;
    overflow: auto;
    overflow-x: hidden;
    display: grid;
    grid-template-rows: 150px 1fr auto;
    padding: 0 0 20px 0;
    margin-top: 0;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-color: rgb(167, 243, 226);
}

header {
    background-color: rgb(158, 192, 231);
    text-align: center;
    height: 100%;
}
header h1 {
    padding-top: 20px;
    font-size: 2.5em;
}
#curriculumCards {
    display: flex;
    overflow: auto;
    margin: 0 25px;
    padding: 20px;
}
.curriculumCard {
    max-width: 200px;
}

